<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/claim_paynym_title1"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/claim_paynym_text1"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/claim_paynym_title2"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/claim_paynym_text2a"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/claim_paynym_text2b"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/claim_paynym_text2c"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/claim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/blue"
            android:text="@string/claim_paynym_id"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/no_claim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/window"
            android:text="@string/claim_paynym_id_refused"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>