<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/window"
    android:orientation="vertical">

    <include layout="@layout/alert_bis_layout" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/replay_disclaimer"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_light"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/text2a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/replay_description"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/replay_text"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/proceed"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="end|center_vertical"
        android:text="@string/replay_ENABLE"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/dismiss"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:gravity="end|center_vertical"
        android:text="@string/replay_dismiss"
        android:textColor="@color/white" />

</LinearLayout>
