<?xml version="1.0" encoding="utf-8"?><!-- fee layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/primary_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:text="@string/fee"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/low_fee"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/low_fee"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/auto_fee"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/auto_fee"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/priority_fee"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/priority_fee"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/custom_fee"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/custom_fee"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/current_fee_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="@color/primary_light" />

</LinearLayout>
