<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_paynym"
            android:textColor="@color/primary_light" />

        <EditText
            android:id="@+id/paynym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_index"
            android:textColor="@color/primary_light" />

        <EditText
            android:id="@+id/index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ok"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
