<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/primary_light" />

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:hint="@string/destination"
            android:imeOptions="flagNoPersonalizedLearning"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/primary_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="50">

                <EditText
                    android:id="@+id/amountBTC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="0.0000"
                    android:imeOptions="flagNoPersonalizedLearning"
                    android:inputType="number|numberDecimal"
                    android:maxLength="17"
                    android:textColor="@color/primary_light"
                    android:textColorHint="@color/primary_light"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/roboto_mono"
                    android:text="BTC"
                    android:typeface="monospace" />
            </RelativeLayout>

            <!--
                        <TextView
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_light"
                            android:text="BTC-USD"
                            android:textSize="14sp"
                            android:gravity="center_horizontal"
                            android:textAlignment="gravity"
                            android:id="@+id/fiatSymbol" />

                        <EditText
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="number|numberDecimal"
                            android:digits="0123456789."
                            android:ems="10"
                            android:id="@+id/amountFiat"
                            android:hint="0.00"
                            android:textColorHint="@color/primary_light"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/primary_light"
                            android:maxLength="17"
                            android:textSize="16sp"
                            />
            -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/max_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/max_available"
                android:textColor="@color/primary_light" />

            <TextView
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_light" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
